--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	  <title> Hestia Homes </title>
-	  <link rel="stylesheet" type="text/css" href="css/style.css">
+	  <link rel="stylesheet" type="css" href="main.css">
   </head>
 
 <body>
