--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-	  <title> Hestia Homes </title>
+	  <title> Hercules Robotics </title>
 	  <link rel="stylesheet" type="css" href="main.css">
   </head>
 
@@ -17,7 +17,7 @@
 			</ul>
 		</div>
 		<div class = "title">
-			<h1> HESTIA HOMES </h1>
+			<h1> Hercules Robotics </h1>
 		</div>
 		<div class= "button">
 			<a href ="#" class = "btn"> Something</a>
